--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                   <span class="pill"><span class="dot">🛡️</span>Defenses</span>
                 </td>
                 <td>
-                  <span class="pill"><span class="dot">📡</span>CS / P2P / Hybrid / Others</span><br/>
+                  <span class="pill"><span class="dot">📡</span>Protocols</span><br/>
                   <span class="pill"><span class="dot">⚠️</span>Risks</span>
                   <span class="pill"><span class="dot">🛡️</span>Defenses</span>
                 </td>
